# django-ecp-signer

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
ecp_auth/: apps.py  backends.py  certificate.py  conf.py  django-stubs-settings.py  exceptions.py  forms.py  generator.py  mixins.py  models.py  urls.py  validators.py  views.py
ecp_auth/management/commands/: cleanup_nonces.py
ecp_auth/migrations/: 0001_initial.py  0002_alter_ecpcertificate_taxpayer_id.py  0003_remove_taxpayer_id.py  0004_add_certificate_updated_at.py
tests/: conftest.py  settings.py  test_backends.py  test_certificate.py  test_generator.py  test_mixins.py  test_validators.py  test_views.py
